--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
-  "name": "remix-example-template",
+  "name": "remix-mui-switch-theme",
   "description": "",
-  "license": "",
+  "author": "Arpit Dalal <arpit@arpitdalal.dev> (https://arpitdalal.dev)",
+  "license": "MIT",
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
@@ -10,14 +11,20 @@
     "start": "remix-serve build"
   },
   "dependencies": {
-    "@remix-run/react": "1.2.2",
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.4.1",
+    "@mui/material": "^5.4.1",
+    "@remix-run/react": "^1.2.2",
+    "@remix-run/serve": "^1.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "1.2.2",
-    "@remix-run/serve": "1.2.2"
+    "remix": "^1.2.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.2.2",
+    "@remix-run/dev": "^1.2.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "typescript": "^4.5.4"
