--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "remix build",
     "dev": "remix dev",
     "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "start": "NODE_ENV='development' && remix-serve build"
   },
   "dependencies": {
     "@emotion/cache": "^11.7.1",
